# Quick-Sort

./: .gitmodules  README.md
OpenMP/DpuLevel/: CMakeLists.txt  quicksort_mt.c  quicksort_mt.h
OpenMP/DpuLevel/benchmarks/: buffer_size_bench.c  common.c  common.h  threads_array_size_bench.c  threads_num_bench.c
OpenMP/DpuLevel/benchmarks/commons/: common.c
OpenMP/DpuLevel/benchmarks/plotter_scripts/: buffer_size_plotter.py  min_chunck_size_plotter.py  threads_num_plotter.py
OpenMP/DpuLevel/benchmarks/results/: buffer_size.csv  threads_num.csv
OpenMP/DpuLevel/commons/: quicksort_common.c  quicksort_common.h
OpenMP/DpuLevel/commons/dataStructure/: work_queue.c  work_queue.h
OpenMP/DpuLevel/tests/: work_queue_test.c
OpenMP/DpuLevel/utils/: utils.h
OpenMP/MergeIdea/: CMakeLists.txt  main.c  quicksort_mt.c  quicksort_mt.h  quicksort_mt_tp.c  quicksort_mt_tp.h
OpenMP/MergeIdea/commons/: quicksort_common.c  quicksort_common.h
OpenMP/MergeIdea/tests/: work_queue_test.c
OpenMP/MergeIdea/utils/: job.h  utils.h  work_queue.c  work_queue.h
OpenMP/hierarchicalSort/: CMakeLists.txt  config.h  quicksort_mt.c  radix_sort.c  radix_sort.h
OpenMP/hierarchicalSort/benchmarks/: merge_partition_bench.c  min_chunk_size_bench.c
OpenMP/hierarchicalSort/benchmarks/benches/distributionBenches/: merge_partition_bench.c  runner.sh  two_step_sort_bench.c
OpenMP/hierarchicalSort/benchmarks/benches/dpuLevel/: threads_num_bench.c
OpenMP/hierarchicalSort/benchmarks/benches/hostLevel/: merge_partition_bench.c
OpenMP/hierarchicalSort/benchmarks/benches/sortBenches/quicksort/: buffer_size_bench.c  min_chunk_size_bench.c  threads_num_bench.c
OpenMP/hierarchicalSort/benchmarks/benches/sortBenches/radixsort/: buffer_size_bench.c  min_chunk_size_bench.c  threads_num_bench.c
OpenMP/hierarchicalSort/benchmarks/commons/: common.c  common.h
OpenMP/hierarchicalSort/benchmarks/plotter_scripts/: merge_partition_plotter.py  min_chunck_size_plotter.py
OpenMP/hierarchicalSort/benchmarks/plotter_scripts/dataDistribution/: data_distribution_plotter.py
OpenMP/hierarchicalSort/benchmarks/plotter_scripts/sort/quicksort/: buffer_size_plotter.py  min_chunck_size_plotter.py  threads_num_plotter.py
OpenMP/hierarchicalSort/benchmarks/plotter_scripts/sort/radixsort/: buffer_size_plotter.py  min_chunck_size_plotter.py  threads_num_plotter.py
OpenMP/hierarchicalSort/benchmarks/results/: merge_partition.csv  min_chunk_size.csv
OpenMP/hierarchicalSort/benchmarks/results/dataDistribution/: merge_partition.csv  two_step_sort.csv
OpenMP/hierarchicalSort/benchmarks/results/sort/radixsort/: buffer_size.csv  min_chunk_size.csv  threads_num.csv
OpenMP/hierarchicalSort/commons/: quicksort_common.c  quicksort_common.h  radixsort_common.c  radixsort_common.h
OpenMP/hierarchicalSort/commons/dataStructure/: job.h  work_queue.c  work_queue.h
OpenMP/hierarchicalSort/dataDistribution/: host.h  sort_prop.h  worker.h
OpenMP/hierarchicalSort/dataDistribution/merge/: partition_and_merge.c  partition_and_merge.h
OpenMP/hierarchicalSort/dataDistribution/radix/: two_step_sort.c  two_step_sort.h
OpenMP/hierarchicalSort/sorts/quicksort/: quicksort_mt.c  quicksort_mt.h
OpenMP/hierarchicalSort/sorts/radix/: lsb_radix_sequential_extra_space.c  lsb_radix_sequential_extra_space.h  msb_radix_parallel_in_place.c  msb_radix_parallel_in_place.h  msb_radix_sequential_in_place.c  msb_radix_sequential_in_place.h
OpenMP/hierarchicalSort/tests/: work_queue_test.c
OpenMP/hierarchicalSort/utils/: utils.h
UPmem/multi_dpu/: dpu.c  host.c  runner.sh
UPmem/multi_dpu/common/: common.h
UPmem/multi_dpu/dpu/: dpu.c
UPmem/multi_dpu/host/: host.c
UPmem/single_dpu/: Makefile  dpu.c  host.c
UPmem/single_dpu/dpu/: dpu.c
UPmem/single_dpu/host/: host.c
baseline/: CMakeLists.txt  main.c  quicksort.c  quicksort.h
